deploy: 013613cfb598bd5f0bab0d65e09b09d39b9d9ca5

--- a/browser/index.html
+++ b/browser/index.html
@@ -21,5 +21,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release/build/highlight.min.js"></script>
-  <script src="polyfills-SCHOHYNV.js" type="module"></script><script src="main-WWPN5LSE.js" type="module"></script></body>
+  <script src="polyfills-SCHOHYNV.js" type="module"></script><script src="main-5G2O26BE.js" type="module"></script></body>
 </html>
