--- a/browser/index.html
+++ b/browser/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-critters-container>
   <head><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta charset="utf-8">
-    <title>Ngx Obelisco 17</title>
+    <title>Ngx Obelisco v17</title>
     <base href="/ngx-obelisco-v17/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
